# vcl-formatter

./: Cargo.toml  Dockerfile  Makefile  README.md  example.vcl
src/: ast.rs  ast_emitter.rs  emitter.rs  error.rs  lexer.rs  main.rs  parser.rs  visitor.rs
tests/: file_based.rs
tests/files/corrupted/: unexpected_token.vcl  unknown_token.vcl
tests/files/nested_expr/: good.vcl
